# AutoAi

.github/workflows/: platform-autgpt-deploy-prod.yml  platform-autogpt-deploy-dev.yaml  platform-backend-ci.yml  platform-frontend-ci.yml  repo-close-stale-issues.yml
autogpt_platform/autogpt_libs/: pyproject.toml
autogpt_platform/backend/: pyproject.toml
autogpt_platform/backend/backend/server/v2/store/: db.py  routes.py
autogpt_platform/frontend/: package.json
