[tool.poetry]
name = "autogpt-platform-backend"
version = "0.4.9"
description = "A platform for building AI-powered agentic workflows"
authors = ["AutoGPT <info@agpt.co>"]
readme = "README.md"
packages = [{ include = "backend", format = "sdist" }]


[tool.poetry.dependencies]
python = ">=3.10,<3.13"
aio-pika = "^9.5.7"
anthropic = "^0.72.0"
apscheduler = "^3.11.1"
autogpt-libs = { path = "../autogpt_libs", develop = true }
bleach = {extras = ["css"], version = "^6.3.0"}
click = "^8.3.0"
cryptography = "^43.0"
discord-py = "^2.6.4"
e2b-code-interpreter = "^1.0.5"
fastapi = "^0.121.1"
feedparser = "^6.0.12"
flake8 = "^7.3.0"
google-api-python-client = "^2.187.0"
google-auth-oauthlib = "^1.2.3"
google-cloud-storage = "^3.5.0"
googlemaps = "^4.10.0"
gravitasml = "^0.1.3"
groq = "^0.33.0"
jinja2 = "^3.1.6"
jsonref = "^1.1.0"
jsonschema = "^4.25.1"
launchdarkly-server-sdk = "^9.12.3"
mem0ai = "^0.1.48"
moviepy = "^2.2.1"
ollama = "^0.6.0"
openai = "^1.61.1"
pika = "^1.3.2"
pinecone = "^5.3.1"
poetry = "^2.2.1"
postmarker = "^1.0"
praw = "~7.8.1"
prisma = "^0.15.0"
psutil = "^6.1.0"
psycopg2-binary = "^2.9.11"
pydantic = {extras = ["email"], version = "^2.12.4"}
pydantic-settings = "^2.12.0"
pyro5 = "^5.15"
pytest = "^8.2.1"
pytest-asyncio = "^0.25.3"
python-dotenv = "^1.2.1"
python-multipart = "^0.0.20"
redis = "^5.2.0"
replicate = "^1.0.7"
sentry-sdk = "2.43.0"
sqlalchemy = "^2.0.44"
strenum = "^0.4.9"
stripe = "^11.5.0"
supabase = "2.24.0"
tenacity = "^9.1.2"
todoist-api-python = "^2.1.7"
tweepy = "^4.16.0"
uvicorn = { extras = ["standard"], version = "^0.38.0" }
websockets = "^14.2"
youtube-transcript-api = "^0.6.2"
zerobouncesdk = "^1.1.1"
# NOTE: please insert new dependencies in their alphabetical location

[tool.poetry.group.dev.dependencies]
aiohappyeyeballs = "^2.4.4"
black = "^24.10.0"
faker = "^33.3.1"
httpx = "^0.27.0"
isort = "^5.13.2"
poethepoet = "^0.32.1"
pyright = "^1.1.392"
pytest-mock = "^3.14.0"
pytest-watcher = "^0.4.2"
requests = "^2.32.3"
ruff = "^0.9.2"
# NOTE: please insert new dependencies in their alphabetical location

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "backend.app:main"
rest = "backend.rest:main"
ws = "backend.ws:main"
executor = "backend.exec:main"
cli = "backend.cli:main"
format = "linter:format"
lint = "linter:lint"
test = "run_tests:test"

[tool.isort]
profile = "black"

[tool.pytest-watcher]
now = false
clear = true
delay = 0.2
runner = "pytest"
runner_args = []
patterns = ["*.py"]
ignore_patterns = []

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
